--- a/html/index-formulario-login.html
+++ b/html/index-formulario-login.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulário Teste</title>
+    <title>Formulário Login Teste</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style-formulario.css">
+    <link rel="stylesheet" href="../css/style-formulario-login.css">
 </head>
-
 <body>
     <div class="container">
         <header>
@@ -18,22 +17,16 @@
         </header>
         <main>
             <section>
-                <form action="http://google.com/search" method="GET" target="blank">
+                <form action="http://google.com" method="POST" target="blank">
                     <fieldset>
                         <legend>Login</legend>
-
-                        <label for="usuario"></label>
                         <input type="email" id="usuario" name="q" placeholder="Username" required autofocus>
-
-                        <label for="senha"></label>
                         <input type="password" id="senha" name="q" placeholder="Password" required>
-
-                        <input class="enviar" type="submit" value="Let me in.">
+                        <input class="botao" type="submit" value="Let me in.">
                     </fieldset>
                 </form>
             </section>
         </main>
     </div>
 </body>
-
 </html>
