Formulario create account v1.1.4

--- a/html/index-cadastro.html
+++ b/html/index-cadastro.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="contaner">
+    <div class="container">
         <main>
             <section>
                 <form action="">
@@ -23,7 +23,7 @@
                     </div>
                     <fieldset>
                         <legend>Create account!</legend>
-                        <div class="container-campo-de-dados">
+                        <div class="container-input-button">
                             <label>Name
                                 <input type="text" id="name" name="q" placeholder="enter your name" autofocus required>
                                 <i class="fas fa-user"></i>
