--- a/html/index-create-account.html
+++ b/html/index-create-account.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Create account</title>
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style-cadastro.css">
+    <link rel="stylesheet" href="/css/style-create-account.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/af562a2a63.js" crossorigin="anonymous"></script>
 
@@ -43,19 +43,23 @@
                                 <i class="fas fa-arrow-right"></i>
                             </button>
                         </div>
-                        <div class="opcoes-cadastro">
-                            <span>Or create account using social medial</span>
+                        <div class="container-opcoes-cadastro">
+                            <span class="text-create-account">Or create account using social medial</span>
                             <div class="icons">
-                                <a href="#">
+                                <a href="https://twitter.com/" target="blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#">
+                                <a href="https://github.com/" target="blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="#">
+                                <a href="https://discord.com/" target="blank">
                                     <i class="fab fa-discord"></i>
                                 </a>
                             </div>
+                            <p class="text-sign-in">Already have an account?</p>
+                            <span class="sing-in">
+                                <a href="../html/index-login.html">Sign in</a>
+                            </span>
                         </div>
                     </fieldset>
                 </form>
